# cpp-template

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.build  README.md  compose.yaml
.github/: FUNDING.yml
.github/template/: template_name  template_repository
docs/: Doxyfile  README.md
include/: example.hpp
lib/: CMakeLists.txt
src/: example.cpp  main.cpp
tests/: exampleTests.cpp
